// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries asset calibration forecast with day groupBy 1`] = `
[
  {
    "fields": [
      {
        "columnDescriptors": [
          {
            "type": "TIME",
            "value": "Day",
          },
        ],
        "name": "Day",
        "values": [
          "2022-01-01",
          "2022-01-02",
          "2022-01-03",
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "COUNT",
            "value": "Assets",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Day",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Assets",
        "values": [
          1,
          2,
          2,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries asset calibration forecast with month groupBy 1`] = `
[
  {
    "fields": [
      {
        "columnDescriptors": [
          {
            "type": "TIME",
            "value": "Month",
          },
        ],
        "name": "Month",
        "values": [
          "January 2022",
          "February 2022",
          "March 2022",
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "COUNT",
            "value": "Assets",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Assets",
        "values": [
          1,
          0,
          3,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries asset calibration forecast with week groupBy 1`] = `
[
  {
    "fields": [
      {
        "columnDescriptors": [
          {
            "type": "TIME",
            "value": "Week",
          },
        ],
        "name": "Week",
        "values": [
          "2022-01-03 : 2022-01-09",
          "2022-01-10 : 2022-01-16",
          "2022-01-17 : 2022-01-23",
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "COUNT",
            "value": "Assets",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Week",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Assets",
        "values": [
          1,
          2,
          2,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with assetType groupBy 1`] = `
[
  {
    "fields": [
      {
        "name": "Group",
        "values": [
          "Generic",
          "Device under test",
        ],
      },
      {
        "name": "Assets",
        "values": [
          1,
          2,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with busType groupBy 1`] = `
[
  {
    "fields": [
      {
        "name": "Group",
        "values": [
          "Built-in-system",
          "FireWire",
        ],
      },
      {
        "name": "Assets",
        "values": [
          1,
          2,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with location groupBy 1`] = `
[
  {
    "fields": [
      {
        "name": "Group",
        "values": [
          "Location1",
          "Location2",
          "Location3",
        ],
      },
      {
        "name": "Assets",
        "values": [
          1,
          2,
          3,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with minion ID location groupBy 1`] = `
[
  {
    "fields": [
      {
        "name": "Group",
        "values": [
          "Minion1",
          "Minion2",
          "Minion3",
        ],
      },
      {
        "name": "Assets",
        "values": [
          1,
          2,
          3,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with model and location groupBy 1`] = `
[
  {
    "fields": [
      {
        "name": "Group",
        "values": [
          "Model1 - Location1",
          "Model2 - Location1",
        ],
      },
      {
        "name": "Assets",
        "values": [
          1,
          2,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with model and workspace groupBy 1`] = `
[
  {
    "fields": [
      {
        "name": "Group",
        "values": [
          "Model1 - Workspace1",
          "Model2 - Workspace1",
        ],
      },
      {
        "name": "Assets",
        "values": [
          1,
          2,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with model groupBy 1`] = `
[
  {
    "fields": [
      {
        "name": "Group",
        "values": [
          "Model1",
          "Model2",
        ],
      },
      {
        "name": "Assets",
        "values": [
          1,
          2,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with month and assetType groupBy 1`] = `
[
  {
    "fields": [
      {
        "columnDescriptors": [
          {
            "type": "TIME",
            "value": "Month",
          },
        ],
        "name": "Month",
        "values": [
          "January 2022",
          "February 2022",
          "March 2022",
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "ASSET_TYPE",
            "value": "DEVICE_UNDER_TEST",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Device under test",
        "values": [
          1,
          2,
          3,
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "ASSET_TYPE",
            "value": "FIXTURE",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Fixture",
        "values": [
          2,
          4,
          1,
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "ASSET_TYPE",
            "value": "GENERIC",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Generic",
        "values": [
          4,
          3,
          1,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with month and busType groupBy 1`] = `
[
  {
    "fields": [
      {
        "columnDescriptors": [
          {
            "type": "TIME",
            "value": "Month",
          },
        ],
        "name": "Month",
        "values": [
          "January 2022",
          "February 2022",
          "March 2022",
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "BUS_TYPE",
            "value": "BUILT_IN_SYSTEM",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Built-in-system",
        "values": [
          1,
          2,
          3,
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "BUS_TYPE",
            "value": "ACCESSORY",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "ACCESSORY",
        "values": [
          2,
          4,
          1,
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "BUS_TYPE",
            "value": "SERIAL",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Serial",
        "values": [
          4,
          3,
          1,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with month and location groupBy 1`] = `
[
  {
    "fields": [
      {
        "columnDescriptors": [
          {
            "type": "TIME",
            "value": "Month",
          },
        ],
        "name": "Month",
        "values": [
          "January 2022",
          "February 2022",
          "March 2022",
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "STRING_VALUE",
            "value": "Location1",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Location1",
        "values": [
          1,
          2,
          3,
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "STRING_VALUE",
            "value": "Location2",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Location2",
        "values": [
          2,
          4,
          1,
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "STRING_VALUE",
            "value": "Location3",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Location3",
        "values": [
          4,
          3,
          1,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with month and vendor groupBy 1`] = `
[
  {
    "fields": [
      {
        "columnDescriptors": [
          {
            "type": "TIME",
            "value": "Month",
          },
        ],
        "name": "Month",
        "values": [
          "January 2022",
          "February 2022",
          "March 2022",
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "STRING_VALUE",
            "value": "Vendor1",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Vendor1",
        "values": [
          1,
          2,
          3,
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "STRING_VALUE",
            "value": "Vendor2",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Vendor2",
        "values": [
          2,
          4,
          1,
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "STRING_VALUE",
            "value": "Vendor3",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Vendor3",
        "values": [
          4,
          3,
          1,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with month and workspace groupBy 1`] = `
[
  {
    "fields": [
      {
        "columnDescriptors": [
          {
            "type": "TIME",
            "value": "Month",
          },
        ],
        "name": "Month",
        "values": [
          "January 2022",
          "February 2022",
          "March 2022",
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "WORKSPACE_ID",
            "value": "Workspace1",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Workspace1",
        "values": [
          1,
          2,
          3,
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "WORKSPACE_ID",
            "value": "Workspace2",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Workspace2",
        "values": [
          2,
          4,
          1,
        ],
      },
      {
        "columnDescriptors": [
          {
            "type": "WORKSPACE_ID",
            "value": "Workspace3",
          },
        ],
        "config": {
          "links": [
            {
              "onBuildUrl": [Function],
              "targetBlank": true,
              "title": "View Month",
              "url": "/d/\${__dashboard.uid}/\${__dashboard}?orgId=\${__org.id}",
            },
          ],
        },
        "name": "Workspace3",
        "values": [
          4,
          3,
          1,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with month groupBy returns empty results 1`] = `
[
  {
    "fields": [],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with vendor groupBy 1`] = `
[
  {
    "fields": [
      {
        "name": "Group",
        "values": [
          "Vendor1",
          "Vendor2",
        ],
      },
      {
        "name": "Assets",
        "values": [
          1,
          2,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries calibration forecast with workspace groupBy 1`] = `
[
  {
    "fields": [
      {
        "name": "Group",
        "values": [
          "Workspace1",
          "Workspace1",
        ],
      },
      {
        "name": "Assets",
        "values": [
          1,
          2,
        ],
      },
    ],
    "refId": "A",
  },
]
`;
